fixed alignment

--- a/src/assets/sass/components/_newPostBox.scss
+++ b/src/assets/sass/components/_newPostBox.scss
@@ -175,7 +175,7 @@
         margin-top: 3px;
       }
 
-      span {
+      .add-image-plus {
         color: map-get($turquoise, 500);
         font-size: 20px;
         display: inline-flex;
